# auto_trader

./: .env.example  .gitignore  PROMPTS_FASE0.md  README.md  pyproject.toml  requirements.txt
backtest/: engine.py  grids.py  metrics.py
bot/: ai_brain.py  config.py  dashboard.py  indicators.py  main.py  scanner.py  state.py  trader.py
bot/templates/: index.html
data/: loader.py
docs/: DECISIONES.md  METODOLOGIA.md
notebooks/: fase0_analisis.ipynb
scripts/: build_report.py  download_all.py  run_all.py  run_bot.py  run_fase0.py  run_oos_final.py
strategies/: __init__.py  atr_trailing.py  base.py  bollinger_breakout.py  ema_cross.py  indicators.py  macd_trend.py  rsi_meanrev.py
tests/: test_engine.py  test_loader.py  test_strategies.py
