[project]
name = "auto_trader"
version = "0.1.0"
description = "Sistema de trading algorítmico — Fase 0: investigación de estrategias base"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.pyright]
pythonVersion = "3.11"
